# mini-submit

./: Cargo.toml  README.md  requests.http
src/: api_key.rs  main.rs
templates/: index.hbs
