[package]
name = "mini-submit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
handlebars = "4.4.0"
base64 = "0.21.4"
serde = { version = "1.0.189", features = ["derive"] }
serde_derive = "1.0.189"
serde_json = "1.0.107"
